--- a/Readme
+++ b/Readme
@@ -6,7 +6,7 @@
 Words' List Learning.feature
 Words' List Learning.py
 
-содержит вызов speach-to-text
+содержит вызов speech-to-text
 
 Код написан Настей
 
